fix(table-wrapper): close the open frame left by overflow: scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -109,6 +109,7 @@ $cell-height: 80px;
   min-height: calc($table-height + 50px);
   max-height: calc($table-height + 50px);
   max-width: calc($table-width + 50px);
+  border-left: 2px solid #f5f5f6; //this is to match the auto-border (left and bottom) which overflow scroll makes
 }
 
 .user-table {
